# sht4x-rjw

./: .nvim.lua  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
src/: asynch.rs  blocking.rs  common.rs  conversions.rs  crc.rs  error.rs  lib.rs  types.rs  utils.rs
tests/: mcp2221.rs
