[package]
name = "sht40-rjw"
version = "0.1.0"
edition = "2024"

[features]
default = ["blocking"]
blocking = ["dep:embedded-hal"]
async = ["dep:embedded-hal-async"]

[dependencies]
embedded-hal = { version = "1.0.0", optional = true }
embedded-hal-async = { version = "1.0.0", optional = true }

[dev-dependencies]
anyhow = "1.0.97"
defmt = "1.0.1"
embedded-hal-mock = { version = "0.11.1", features = ["embedded-hal-async"] }
mcp2221 = { version = "0.1.1", path = "../mcp2221-rs-rjw" }
pollster = { version = "0.4.0", features = ["macro"] }
