[package]
name = "sht40-rjw"
version = "0.1.0"
edition = "2024"

[features]
default = ["blocking"]
blocking = []
async = ["dep:embedded-hal-async"]
defmt = ["dep:defmt"]
fixed = ["dep:fixed"]

[dependencies]
embedded-hal = { version = "1.0.0" }
embedded-hal-async = { version = "1.0.0", optional = true }
defmt = { version = "1.0.1", optional = true }
fixed = { version = "1.29.0", optional = true }

[dev-dependencies]
anyhow = "1.0.97"
defmt = "1.0.1"
embedded-hal-mock = { version = "0.11.1", features = ["embedded-hal-async"] }
mcp2221 = { version = "0.1.1", path = "../mcp2221-rs-rjw" }
pollster = { version = "0.4.0", features = ["macro"] }
