[package]
name = "sht4x-rjw"
description = "no-std driver for the Sensirion SHT4x series of temperature and humidity sensors"
repository = "https://github.com/robjwells/sht4x-rjw"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["driver", "sensor", "sht40", "sensirion", "embedded-hal"]
categories = ["embedded", "hardware-support", "no-std"]

[features]
default = ["blocking"]
blocking = []
async = ["dep:embedded-hal-async"]
defmt = ["dep:defmt"]
fixed = ["dep:fixed"]

[dependencies]
embedded-hal = { version = "1.0.0" }
embedded-hal-async = { version = "1.0.0", optional = true }
defmt = { version = "1.0.1", optional = true }
fixed = { version = "1.29.0", optional = true }

[dev-dependencies]
anyhow = "1.0.97"
defmt = "1.0.1"
embedded-hal-mock = { version = "0.11.1", features = ["embedded-hal-async"] }
mcp2221-hal = { version = "0.1" }
pollster = { version = "0.4.0", features = ["macro"] }
